turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: not found: value rue
  rue(state)(col)(1) match{
  ^